# Py_WEB_06

./: README.md  create_tables_pgresql.py  create_tables_postgresql.py  create_tables_sql_lite.py  execute_sql_query_request.py  insert_fakers_into_tables.py  main.py  pyproject.toml  web_app.py  your_database_name.db
sql/: query_01.sql  query_02.sql  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  query_11.sql  query_12.sql
static/: style.css
tables/: __init__.py  grades.py  grades_table.py  groups.py  groups_table.py  students_table.py  subjects_table.py  table.py  teachers_table.py
templates/: grades.html  groups.html  index.html  students.html  subjects.html  teachers.html
