[tool.poetry]
name = "py_web_06"
version = "0.1.0"
description = ""
authors = ["Siracenco Serghei <108734530+SiracencoSerghei@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Faker = "^23.1.0"
psycopg2 = "^2.9.9"
Flask = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
